// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdminDeleteRegistration can delete a registration as an admin user 1`] = `
{
  "data": {
    "adminDeleteRegistration": {
      "success": true,
    },
  },
}
`;

exports[`AdminDeleteRegistration can't delete registration if user is not an admin 1`] = `
{
  "data": {
    "adminDeleteRegistration": null,
  },
  "errors": [
    {
      "extensions": {
        "exception": {
          "code": "DNIED",
          "severity": "ERROR",
          "where": "PL/pgSQL function app_public.check_is_admin() line 4 at RAISE
SQL statement "call app_public.check_is_admin()"
PL/pgSQL function app_public.admin_delete_registration(uuid) line 6 at CALL",
        },
      },
      "locations": [
        {
          "column": 3,
          "line": 2,
        },
      ],
      "message": "Acces denied. Only admins are allowed to use this mutation.",
      "path": [
        "adminDeleteRegistration",
      ],
    },
  ],
}
`;

exports[`AdminDeleteRegistration returns an error if registration is not found 1`] = `
{
  "data": {
    "adminDeleteRegistration": null,
  },
  "errors": [
    {
      "extensions": {
        "exception": {
          "code": "NTFND",
          "severity": "ERROR",
          "where": "PL/pgSQL function app_public.admin_delete_registration(uuid) line 12 at RAISE",
        },
      },
      "locations": [
        {
          "column": 3,
          "line": 2,
        },
      ],
      "message": "Registration was not found.",
      "path": [
        "adminDeleteRegistration",
      ],
    },
  ],
}
`;
